--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-p {color: rgb(129, 6, 243); font-style: italic;}
+p {color: rgb(158, 155, 161); font-style: italic;}
 h1 {color: blue;font-size: 50px;}
 p{font-size: 25px;}
 h1{font-size: 50px; text-align: center}
-.tonton{color: rgb(129, 6, 243);}
+.tonton{color: rgb(121, 120, 123);}
 .tonton2{font-size: 30px;}
 .Maxence{font-size: 80px;}
     
@@ -22,7 +22,7 @@ h2{ font-size: 50px;font-optical-sizing: auto ;font-style: normal;  }
   h4{font-optical-sizing: auto;font-size: 50px;}
 h4{font-style: normal; font-weight: 500; text-align: center;color: blue;}
 a{text-align:center}
-h1{background:linear-gradient(to left,rgb(170, 5, 182), #fd8fff )}
+h1{background:linear-gradient(to left,rgb(230, 221, 230), #4d4b4d )}
 body{background-image: url(images/fond\ rouge.jpg);}
 .titre{
     border: 10px solid red;border-radius: 90px 90px 90px 90px ;
@@ -37,15 +37,15 @@ h2{font-weight: 500;}
 h2{ font-family: "Playwrite IS",cursive}
 h2{color: blue;}
 h2{ font-size: 50px}
-h2{background:linear-gradient(to left,rgb(170, 5, 182), #fd8fff )}
-h3{background:linear-gradient(to left,rgb(170, 5, 182), #fd8fff )}
-h4{background:linear-gradient(to left,rgb(170, 5, 182), #fd8fff )}
+h2{background:linear-gradient(to left,rgb(225, 220, 225), #656465 )}
+h3{background:linear-gradient(to left,rgb(228, 221, 229), #6e6c6e )}
+h4{background:linear-gradient(to left,rgb(234, 227, 234), #656365 )}
 .para2{border-top-style: 10px solid red ; border-radius:90px 90px 90px 90px;}
 .para3{border-top-style: 10px solid red ; border-radius:90px 90px 90px 90px;}
 .para4{border-top-style: 10px solid red ; border-radius:90px 90px 90px 90px;}
 .parasd1{border-top-style: 10px solid red ; border-radius:90px 90px 90px 90px;}
 a{background:linear-gradient( to right, rgb(9, 186, 206),rgb(0, 225, 255)); border-radius:20px 20px 20px 20px;}
-h5{background:linear-gradient(to left,rgb(170, 5, 182), #fd8fff )}
+h5{background:linear-gradient(to left,rgb(251, 249, 251), #7a797a )}
 h5{font-style: normal; font-weight: 500; text-align: center;color: blue;}
 h5{ font-family: "Playwrite IS", cursive;}
 h5{font-optical-sizing: auto;font-size: 50px;}
